logs/Slang/generated/hdlconv/hdlconvertor_p138.sv.log
name: hdlconvertor_p138
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p138.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p138.sv:1:1: error: language feature not yet supported
class Packet;
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p138.sv:3:13: error: expected identifier
    function new();
            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p138.sv:3:14: error: expected statement
    function new();
             ^~~
